added learning goals object and linked it to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="./style.css" rel="stylesheet" />
+    <script src="goals.js"></script>
 </head>
 <body>
     <h1> Learning Goal Editor</h1>
@@ -41,6 +42,7 @@
       let fileHandle;  
       let adventureList;
       let jsonContents;
+      console.log(allLearningGoals);
       const open = document.querySelector(".open");
     //   open button
       open.addEventListener("click", async () => {
